--- a/public/styles.css
+++ b/public/styles.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    overflow: hidden; /* Prevent body from scrolling */
 }
 
 body {
@@ -25,9 +24,7 @@ h1, h2 {
 
 .container {
     display: flex;
-    padding: 20px;
-    height: calc(100vh - 100px); /* Adjust for header height */
-    overflow: hidden;
+    height: 100%;
 }
 
 .search-input {
@@ -60,14 +57,12 @@ h1, h2 {
 .details-and-browser {
     flex: 3;
     padding: 20px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
+    overflow-y: auto;
+    height: 100%;
 }
 
 .game-details {
     margin-bottom: 20px;
-    flex-shrink: 0; /* Prevent game details from shrinking */
 }
 
 ul {
@@ -106,29 +101,4 @@ button {
 .game-icon-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 80px;
-    margin: 10px;
-    cursor: pointer;
-    transition: transform 0.3s, background-color 0.3s;
-    background-color: #34495e;
-    border-radius: 5px;
-    padding: 10px;
-}
-
-.game-icon {
-    width: 50px;
-    height: 50px;
-    margin-bottom: 5px;
-}
-
-.game-icons.grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-}
-
-.game-icon-container:hover {
-    transform: scale(1.1);
-    background-color: #c0392b;
-}
+    align
