--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    overflow: hidden; /* Prevent body from scrolling */
 }
 
 body {
@@ -24,7 +25,9 @@ h1, h2 {
 
 .container {
     display: flex;
-    height: 100%;
+    padding: 20px;
+    height: calc(100vh - 100px); /* Adjust for header height */
+    overflow: hidden;
 }
 
 .search-input {
@@ -38,7 +41,7 @@ h1, h2 {
 
 .category-list {
     flex: 1;
-    min-width: 300px;
+    min-width: 550px; /*addjust for width of application pannel*/
     border-right: 1px solid #7f8c8d;
     padding: 20px;
     overflow-y: auto;
@@ -57,12 +60,14 @@ h1, h2 {
 .details-and-browser {
     flex: 3;
     padding: 20px;
-    overflow-y: auto;
-    height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 .game-details {
     margin-bottom: 20px;
+    flex-shrink: 0; /* Prevent game details from shrinking */
 }
 
 ul {
@@ -101,4 +106,29 @@ button {
 .game-icon-container {
     display: flex;
     flex-direction: column;
-    align
+    align-items: center;
+    width: 80px;
+    margin: 10px;
+    cursor: pointer;
+    transition: transform 0.3s, background-color 0.3s;
+    background-color: #34495e;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.game-icon {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 5px;
+}
+
+.game-icons.grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+}
+
+.game-icon-container:hover {
+    transform: scale(1.1);
+    background-color: #c0392b;
+}
